--- a/src/NewStudentView.fxml
+++ b/src/NewStudentView.fxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
 <AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="NewStudentController">
    <children>
-      <GridPane layoutX="70.0" layoutY="105.0" prefHeight="141.0" prefWidth="640.0">
+      <GridPane layoutX="40.0" layoutY="120.0" prefHeight="110.0" prefWidth="494.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -17,24 +18,33 @@
           <RowConstraints maxHeight="75.39999999999999" minHeight="10.0" prefHeight="47.39999999999999" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label text="First Name: ">
+            <Label prefHeight="27.0" prefWidth="192.0" text="First Name: ">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Label prefHeight="20.0" prefWidth="81.0" text="Last Name:" GridPane.rowIndex="1">
+            <Label prefHeight="27.0" prefWidth="225.0" text="Last Name:" GridPane.rowIndex="1">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Label text="Student number:" GridPane.rowIndex="2">
+            <Label prefHeight="27.0" prefWidth="251.0" text="Student number:" GridPane.rowIndex="2">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <TextField fx:id="firstNameTextField" GridPane.columnIndex="1" />
-            <TextField fx:id="lastNameTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="stuNumTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="firstNameTextField" GridPane.columnIndex="1">
+               <font>
+                  <Font size="14.0" />
+               </font></TextField>
+            <TextField fx:id="lastNameTextField" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <font>
+                  <Font size="14.0" />
+               </font></TextField>
+            <TextField fx:id="stuNumTextField" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <font>
+                  <Font size="14.0" />
+               </font></TextField>
          </children>
       </GridPane>
       <Label alignment="TOP_CENTER" layoutX="169.0" layoutY="33.0" text=" Create New Student" textFill="#210be8">
@@ -42,7 +52,7 @@
             <Font name="Verdana Bold Italic" size="36.0" />
          </font>
       </Label>
-      <VBox alignment="CENTER_LEFT" layoutX="265.0" layoutY="306.0" prefHeight="134.0" prefWidth="134.0" spacing="10.0">
+      <VBox alignment="CENTER_LEFT" layoutX="287.0" layoutY="292.0" prefHeight="134.0" prefWidth="134.0" spacing="10.0">
          <children>
             <CheckBox fx:id="readingCheckBox" mnemonicParsing="false" text="Reading">
                <font>
@@ -62,12 +72,12 @@
                </font></CheckBox>
          </children>
       </VBox>
-      <Label layoutX="72.0" layoutY="300.0" text="Favourite Activities :">
+      <Label layoutX="40.0" layoutY="286.0" prefHeight="27.0" prefWidth="192.0" text="Favourite Activities :">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <VBox alignment="CENTER_LEFT" layoutX="457.0" layoutY="306.0" prefHeight="134.0" prefWidth="119.0" spacing="10.0">
+      <VBox alignment="CENTER_LEFT" layoutX="436.0" layoutY="292.0" prefHeight="134.0" prefWidth="119.0" spacing="10.0">
          <children>
             <CheckBox fx:id="shoppingCheckBox" mnemonicParsing="false" text="Shopping">
                <font>
@@ -93,6 +103,19 @@
             <Font name="Webdings" size="18.0" />
          </font>
       </Label>
-      <Button layoutX="457.0" layoutY="536.0" mnemonicParsing="false" onAction="#changeScreenOnButtonPushed" text="Go to Student Card" />
+      <Button fx:id="viewStudentButton" layoutX="457.0" layoutY="536.0" mnemonicParsing="false" onAction="#changeScreenOnButtonPushed" text="Go to Student Card" />
+      <ImageView fx:id="newStudentImageView" fitHeight="134.0" fitWidth="192.0" layoutX="574.0" layoutY="125.0" pickOnBounds="true" preserveRatio="true" />
+      <Button fx:id="imageChooserButton" layoutX="575.0" layoutY="286.0" mnemonicParsing="false" onAction="#fileChooseButtonPushed" prefHeight="26.0" prefWidth="181.0" text="Choose an image" />
+      <Label layoutX="40.0" layoutY="238.0" prefHeight="18.0" prefWidth="147.0" text="Birthday:">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Label>
+      <Label fx:id="ageLabel" layoutX="447.0" layoutY="236.0" prefHeight="26.0" prefWidth="86.0" text="Label">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <DatePicker fx:id="birthdayPicker" layoutX="287.0" layoutY="237.0" prefHeight="26.0" prefWidth="156.0" />
    </children>
 </AnchorPane>
