--- a/src/NewStudentView.fxml
+++ b/src/NewStudentView.fxml
@@ -116,6 +116,6 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <DatePicker fx:id="birthdayPicker" layoutX="287.0" layoutY="237.0" prefHeight="26.0" prefWidth="156.0" />
+      <DatePicker fx:id="birthdayPicker" layoutX="287.0" layoutY="237.0" onAction="#onAction" prefHeight="26.0" prefWidth="156.0" />
    </children>
 </AnchorPane>
