--- a/src/StudentView.fxml
+++ b/src/StudentView.fxml
@@ -7,44 +7,46 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="StudentViewController">
    <children>
-      <ImageView fx:id="studentImageView" fitHeight="159.0" fitWidth="247.0" layoutX="50.0" layoutY="79.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="studentImageView" fitHeight="138.0" fitWidth="233.0" layoutX="50.0" layoutY="79.0" pickOnBounds="true" preserveRatio="true" />
       <AnchorPane layoutX="50.0" layoutY="321.0" prefHeight="230.0" prefWidth="720.0">
          <children>
-            <Label layoutX="69.0" layoutY="35.0" text="Favourite Activities :" textFill="#af5555">
+            <Label layoutX="69.0" layoutY="35.0" text="Favourite Activities :" textFill="#1e0808">
                <font>
-                  <Font name="Broadway" size="18.0" />
+                  <Font name="System Bold" size="16.0" />
                </font>
             </Label>
             <TextArea fx:id="favActTextArea" layoutX="296.0" layoutY="35.0" prefHeight="138.0" prefWidth="247.0" />
+            <Button layoutX="634.0" layoutY="137.0" mnemonicParsing="false" onAction="#createStudent" text="Create New Student " />
          </children>
       </AnchorPane>
-      <GridPane layoutX="328.0" layoutY="64.0" prefHeight="178.0" prefWidth="425.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+      <VBox alignment="CENTER_LEFT" layoutX="347.0" layoutY="67.0" prefHeight="195.0" prefWidth="354.0" spacing="10.0">
          <children>
-            <Label fx:id="firstNameLabel" prefHeight="21.0" prefWidth="177.0" text="First Name :" textFill="#af5555">
+            <Label fx:id="firstNameLabel" text="First Name :">
                <font>
-                  <Font name="Broadway" size="18.0" />
+                  <Font name="System Bold" size="16.0" />
                </font>
             </Label>
-            <Label fx:id="lastNameLabel" prefHeight="21.0" prefWidth="190.0" text="Last Name :" textFill="#af5555" GridPane.rowIndex="1">
+            <Label fx:id="lastNameLabel" text="Last Name :">
                <font>
-                  <Font name="Broadway" size="18.0" />
+                  <Font name="System Bold" size="16.0" />
                </font>
             </Label>
-            <Label fx:id="studentNumLabel" prefHeight="21.0" prefWidth="218.0" text="Stundent Number :" textFill="#af5555" GridPane.rowIndex="2">
+            <Label fx:id="studentNumLabel" text="Student Number :">
                <font>
-                  <Font name="Broadway" size="18.0" />
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </Label>
+            <Label fx:id="birthdayLabel" text="Birthday :">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </Label>
+            <Label fx:id="ageLabel" text="Age :">
+               <font>
+                  <Font name="System Bold" size="16.0" />
                </font>
             </Label>
          </children>
-      </GridPane>
+      </VBox>
    </children>
 </AnchorPane>
