--- a/src/NewStudentView.fxml
+++ b/src/NewStudentView.fxml
@@ -97,7 +97,7 @@
                </font></CheckBox>
          </children>
       </VBox>
-      <Button layoutX="265.0" layoutY="536.0" mnemonicParsing="false" onAction="#submitDataOnButtonPushed" text="Submit" />
+      <Button layoutX="287.0" layoutY="536.0" mnemonicParsing="false" onAction="#submitDataOnButtonPushed" text="Submit" />
       <Label fx:id="errorLabel" layoutX="72.0" layoutY="469.0" prefHeight="35.0" prefWidth="664.0" textFill="#df0e0e">
          <font>
             <Font name="Webdings" size="18.0" />
@@ -117,5 +117,6 @@
          </font>
       </Label>
       <DatePicker fx:id="birthdayPicker" layoutX="287.0" layoutY="237.0" onAction="#onAction" prefHeight="26.0" prefWidth="156.0" />
+      <Button layoutX="578.0" layoutY="334.0" mnemonicParsing="false" onAction="#getDefaultStudent" prefHeight="26.0" prefWidth="181.0" text="Load Default Student" />
    </children>
 </AnchorPane>
